# TypePython

./: .gitignore  Cargo.toml  MIGRATION_PLAN.md  README.md  TODO-nostd.md  TODO-python-features.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
compiler/: Cargo.toml
compiler/src/: driver.rs  error.rs  lib.rs
compiler/src/ast/: converter.rs  mod.rs  types.rs
compiler/src/codegen/: context.rs  generator.rs  mod.rs  runtime.rs
compiler/src/codegen/tir/: declarations.rs  expressions.rs  function_gen.rs  mod.rs  operators.rs  statements.rs  value_utils.rs
compiler/src/python_ast/: mod.rs  parser.rs
compiler/src/tir/: decls.rs  decls_unresolved.rs  expr.rs  expr_unresolved.rs  ids.rs  lower.rs  mod.rs  program.rs  program_unresolved.rs  resolve.rs  stmt.rs  stmt_unresolved.rs  types.rs  types_unresolved.rs
compiler/src/tir/lower/: body_lowerer.rs  constraints.rs  expr_lowering.rs  scope.rs  stmt_lowering.rs  symbols.rs  utils.rs
compiler/src/tir/lower/builtins/: bytearray.rs  bytes.rs  exception.rs  list.rs  list_iterator.rs  mod.rs  range.rs  str_class.rs
compiler/src/tir/lower/passes/: bodies.rs  definitions.rs  mod.rs  scopes.rs
doc/: README.md
runtime/: Cargo.toml  build.rs
runtime/musl/: config.mak
runtime/src/: builtins.c  bytearray.c  bytes.c  bytes.h  class.c  exception.c  exception.h  glibc_compat.c  io.h  lib.rs  list.c  range.c  runtime.h  str.c  str.h  types.h
scripts/: ast_to_json.py  generate_coverage_report.py  generate_tests.py  install-hooks.sh  pre-commit
src/: ast.rs  cli.rs  codegen.rs  grammar.pest  lib.rs  main.rs  module.rs  pest_to_ast.rs  pipeline.rs  preprocessor.rs
src/ast/: mod.rs  parser.rs  visitor.rs
src/codegen/: builtins.rs  generator.rs  mod.rs
src/preprocessor/: mod.rs
src/runtime/: builtin.c  common.h  sds.h
src/types/: bool.rs  bytes.rs  codegen.rs  float.rs  int.rs  mod.rs  none.rs  traits.rs  value.rs
test/: main.py
test/algorithm/: fibonacci.py  test_runner.py
test/basic/: hello.py  test_runner.py
test/datastructure/: bst.py  hashmap.py  hashset.py  heap.py  test_runner.py
test/exceptions/: basic_try.py  except_types.py  exception_reraise.py  finally_always.py  just_raise.py  (+8 more)
tests/: .gitignore  README.md  integration_test.rs
(+3436 files in other folders)
