[package]
name = "tpy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
pest = "2.8.4"
pest_derive = "2.8.4"
inkwell = { version = "0.7.0", features = ["llvm21-1"] }
either = "1.9"
tempfile = "3"
lazy_static = "1.4"

[dev-dependencies]
anyhow = "1.0"

# Coverage configuration for cargo-llvm-cov
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }
