[workspace]
members = ["compiler", "runtime"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PyCompiler Team"]

[package]
name = "pycompiler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pyrun"
path = "src/bin/pyrun.rs"

[[bin]]
name = "pycc"
path = "src/bin/pycc.rs"

[dependencies]
compiler = { path = "compiler" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
similar = { version = "2.6", features = ["inline"] }
